--- a/css/index.css
+++ b/css/index.css
@@ -130,7 +130,7 @@ header {
 .nav-tab:not(:last-child) {
     padding: 10px 25px;
     margin: 0;
-    border-right: 1px solid #eee;
+
 }
 
 .nav-tab:last-child {
@@ -338,9 +338,9 @@ header {
 }
 
 .slider-products {
-    width: 80% !important;
+    width: 80%;
     margin: 0 auto;
-    display: flex !important;
+    display: flex;
     justify-content: space-around !important;
 
 }
@@ -813,4 +813,45 @@ header {
 
 #product-love-tab {
     height: 700px;
+}
+
+#button {
+    display: inline-block;
+    background-color: #e04530;
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    border-radius: 50%;
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    transition: background-color .3s,
+        opacity .5s, visibility .5s;
+    opacity: 0;
+    visibility: hidden;
+    z-index: 1000;
+}
+
+#button::after {
+    content: "\f062";
+    font-family: FontAwesome;
+    font-weight: normal;
+    font-style: normal;
+    font-size: 1em;
+    line-height: 30px;
+    color: #fff;
+}
+
+#button:hover {
+    cursor: pointer;
+    background-color: #333;
+}
+
+#button:active {
+    background-color: #555;
+}
+
+#button.show {
+    opacity: 1;
+    visibility: visible;
 }
