--- a/layout/footer/footer.css
+++ b/layout/footer/footer.css
@@ -108,3 +108,27 @@ footer {
     color: gray;
     font-size: 20px;
 }
+
+
+@media (max-width: 400px) {
+    .footer-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer-container>div {
+        border-bottom: 1px dashed #ccc;
+        width: 100%;
+        padding-bottom: 10px;
+        margin-top: 20px;
+    }
+
+    .footer-container>div:last-child {
+        border: none;
+    }
+
+    .menu-page {
+        display: none;
+    }
+}
